--- a/views/partials/burgers/delete-burger.handlebars
+++ b/views/partials/burgers/delete-burger.handlebars
@@ -1,4 +1,4 @@
-<form action="/{{this.burger_id}}?_method=DELETE" method="POST">
+<form action="/{{this.id}}?_method=DELETE" method="POST">
 			          <input type="hidden" name="devoured" value="true">
 			          <button class="btn-danger" type="submit">Trash It!</button>
 			        </form>
